--- a/journal.html
+++ b/journal.html
@@ -8,7 +8,7 @@
 <body>
 
 	<h1>First Journal Entry</h1>
-	<p>Today I am in comp sci figuring out how to write a journal entry!</p>
+	<p>Today I am in comp sci figuring out how to write a journal entry! Yay! </p>
 
 </body>
 </html>
