molly pushing for winslow

--- a/journal.html
+++ b/journal.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<style type="text/css">
+		
+		body{
+			background-color: lightpink;
+		}
+
+	</style>
+	
+<link rel="stylesheet" type="text/css" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Wavefont:wght@300&display=swap" rel="stylesheet">
+	<style type="text/css">
+		
+		#h1{
+			font-family: ;
+
+		}
+
+	</style>
+
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 </head>
 <body>
 
-	<h1>First Journal Entry</h1>
-	<p>Today I am in comp sci figuring out how to write a journal entry! Yay! </p>
+	<h1>winslow's journal</h1>
+	<p>hey hello </p>
+
+	<p>today we learned how to inspect and use the console feature. we learned how to use the keypress, click, and mousemove functions and how they affect the console. </p>
 
 </body>
 </html>
