--- a/projects.html
+++ b/projects.html
@@ -1,2 +1,47 @@
-what, really will this link?
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Shadows+Into+Light&family=Wavefont:wght@300&display=swap" rel="stylesheet">
+	<style type="text/css">
+	
+		h1 {
+			font-family: Shadows Into Light;
 
+		}
+		
+		body{
+			background-color:lightblue;
+
+		}
+
+		a {
+			font-family: Shadows Into Light;
+			font-size: 20px;
+
+		}
+		
+
+
+
+	</style>
+</head>
+<body>
+
+<h1>projects page!!</h1>
+
+<a href="project1.html">
+	<div class="button"> boxes! </div>
+</a>
+<!-- <a href="projects1.html">
+		
+		<div class="button" id="boxes"></div>
+
+	</a> -->
+
+
+</body>
+</html>
