pushing my website 12/14

--- a/card2.html
+++ b/card2.html
@@ -8,6 +8,22 @@
 	body{
 		background-color:lightyellow;
 	}
+	#galleryicon{
+		background-image:url(galleryicon.png);
+		width:75px;
+		height:75px;
+		background-size: contain;
+		background-repeat:no-repeat ;
+		display: inline-block;
+		position: absolute;
+		left:90%;
+		top:0px;
+	}
+
+	h1{
+		font-family:Chelsea Market;
+		
+	}
 	#videoicon{
 		background-image:url(videoicon.png);
 		width:75px;
@@ -16,20 +32,6 @@
 		background-repeat:no-repeat ;
 		display: inline-block;
 		position: absolute;
-	}
-	#videoicon2{
-		background-image:url(videoicon.png);
-		width:75px;
-		height:75px;
-		background-size: contain;
-		background-repeat:no-repeat ;
-		display: inline-block;
-		position: absolute;
-	}
-
-	h1{
-		font-family:Chelsea Market;
-		
 	}
 
 	#momfilm{
@@ -105,9 +107,9 @@
 		<div id="videoicon"></div>
 	
 	</a>
-	<a href="video.html">
+	<a href="cardphotos.html">
 
-		<div id="videoicon2"></div>
+		<div id="galleryicon"></div>
 	
 	</a>
 <center>
@@ -115,7 +117,11 @@
 <h1>❤ happy thanksgiving! so so so grateful for you ❤</h1>
 
 
+	<!-- <a href="video.html">
 
+		<div id="videoicon2"></div>
+	
+	</a> -->
 
 		<div id="momfilm"></div>
 
