--- a/journal.html
+++ b/journal.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Indie+Flower&family=Nosifer&family=Quicksand:wght@300&family=Rock+Salt&family=Shadows+Into+Light&family=Wavefont:wght@300&display=swap" rel="stylesheet">
 	<style type="text/css">
 		
 		body{
 			background-color: lightpink;
 		}
-
-	</style>
-	
-<link rel="stylesheet" type="text/css" href="<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Wavefont:wght@300&display=swap" rel="stylesheet">
-	<style type="text/css">
 		
-		#h1{
-			font-family: ;
+		h1{
+			font-family: Chelsea Market;
 
 		}
+
+		p{
+			font-family: Chelsea Market;
+			background-color: lightgrey;
+		}
+		p2{
+			font-family: Chelsea Market;
+			background-color: white;
+		}
+
+
 
 	</style>
 
@@ -28,13 +33,17 @@
 	<title></title>
 </head>
 <body>
-
+<center>
 	<h1>winslow's journal</h1>
+</center>
+	<h4></h4>
 	<p>hey hello </p>
 
-	<p>today we learned how to inspect and use the console feature. we learned how to use the keypress, click, and mousemove functions and how they affect the console. </p>
+	<p2>today we learned how to inspect and use the console feature. we learned how to use the keypress, click, and mousemove functions and how they affect the console. </p>
 
 	<p>hi journal! my original idea for my jumpscare was to make a website where you click on a pumpkin to make it grow but then add in a jump scare at a random click. i was able to figure out how to add in the jumpscare but not at any random click. as of right now, the jumpscare happens everytime on the 5th click. </p>
+
+	<p2>I just finished my gratitude card for my parents for thanksgiving. I made it so hearts appear on every click and also added a video icon that links to a video with my mom. On the top right I also included a photo gallery icon that links to a page with photos of my dad and me!</p>
 
 </body>
 </html>
