--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,9 @@
 		#heart{
 			background-image:url(heart2.png);
 		}
+		#chipotle{
+			background-image:url(chipotle.png);
+		}
 
 
 		.button{
@@ -53,7 +56,7 @@
 <body>
 <center>
 <h1>winslow's projects page!!</h1>
-</center>
+
 
 <a href="project1.html">
 	<div class="button" id = "boxes"></div>
@@ -67,6 +70,10 @@
 <a href="card2.html">
 	<div class="button" id="heart"></div>
 </a>
+<a href="chipotle.html">
+	<div class="button" id="chipotle"></div>
+</a>
+</center>
 
 <!-- <a href="projects1.html">
 		
