--- a/video.html
+++ b/video.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <center>
-<h1>i couln't ask for a better mom and best friend ❤ thank you for everything you do for me and my sisters 😚 love you to pieces</h1>
+<h1>i couldn't ask for a better mom and best friend ❤ thank you for everything you do for me and my sisters 😚 love you to pieces</h1>
 <video controls="controls" width="800" height="600" name="movie" display="inline-block">
   <source src="./parents/movie.mov">
 </video>
