--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 			background-repeat:no-repeat ;
 			display:inline-block;
 			background-position: center;
+			transition:1s;
+
+		}
+		#sun:hover {
+			width:250px;
+			height:250px;
+			background-image:url(sun.png);
+			background-size: contain;
+			background-repeat:no-repeat ;
+			display:inline-block;
+			background-position: center;
+			transition: 1s;
 
 		}
 
@@ -31,6 +43,18 @@
 			background-repeat:no-repeat ;
 			display: inline-block;
 			background-position: center;
+			transition:1s;
+
+		}
+		#dolphin:hover {
+			width:250px;
+			height:250px;
+			background-image:url(dolphin.png);
+			background-size: contain;
+			background-repeat:no-repeat ;
+			display: inline-block;
+			background-position: center;
+			transition:1s;
 
 		}
 
@@ -42,7 +66,19 @@
 			background-repeat:no-repeat ;
 			display: inline-block;
 			background-position: center;
+			transition:1s;
 		}
+		#beach:hover {
+			width:250px;
+			height:250px;
+			background-image:url(beach.png);
+			background-size: contain;
+			background-repeat:no-repeat ;
+			display: inline-block;
+			background-position: center;
+			transition:1s;
+		}
+
 
 
 
