--- a/journal.html
+++ b/journal.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Indie+Flower&family=Nosifer&family=Quicksand:wght@300&family=Rock+Salt&family=Shadows+Into+Light&family=Wavefont:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 	<style type="text/css">
 		
 		body{
@@ -10,17 +11,20 @@
 		}
 		
 		h1{
-			font-family: Chelsea Market;
+			font-family: Patrick Hand;
+			font-size: 50px;
 
 		}
 
 		p{
-			font-family: Chelsea Market;
-			background-color: lightgrey;
+			font-family: Patrick Hand;
+			font-size: 20px;
+			
 		}
 		p2{
-			font-family: Chelsea Market;
+			font-family: Patrick Hand;
 			background-color: white;
+			font-size: 20px;
 		}
 
 
@@ -43,7 +47,13 @@
 
 	<p>hi journal! my original idea for my jumpscare was to make a website where you click on a pumpkin to make it grow but then add in a jump scare at a random click. i was able to figure out how to add in the jumpscare but not at any random click. as of right now, the jumpscare happens everytime on the 5th click. </p>
 
-	<p2>I just finished my gratitude card for my parents for thanksgiving. I made it so hearts appear on every click and also added a video icon that links to a video with my mom. On the top right I also included a photo gallery icon that links to a page with photos of my dad and me!</p>
+	<p2>I just finished my gratitude card for my parents for thanksgiving. I made it so hearts appear on every click and also added a video icon that links to a video with my mom. On the top right I also included a photo gallery icon that links to a page with photos of my dad and me. For the photo strips on either side of the</p>
+
+	<p>Today we worked on using arrays with random values stored in variables. we asked a question and learned how to randomize the answer in the console.</p>
+
+	<p2>Today we learned how a for loop works.</p>
+
+	<p>In the past few classes we have learned how to randomize colors using the rgb scale, arrays, and how to move images with if statements. I made a project where you move a golden retiever to eat the treats, I made a joke generator, and a random color project where you change the color to fit the prompt. </p>
 
 </body>
 </html>
