pushing final website

--- a/journal.html
+++ b/journal.html
@@ -55,5 +55,9 @@
 
 	<p>In the past few classes we have learned how to randomize colors using the rgb scale, arrays, and how to move images with if statements. I made a project where you move a golden retiever to eat the treats, I made a joke generator, and a random color project where you change the color to fit the prompt. </p>
 
+	<p2>4/11/24: I have recently started working on my final project which is going to be tied to soccer/my soccer team in some way. When thinking about things that resonated with me, the first thing that came to mind was soccer. My coach has been very interested in marking our progress throughout the season both individually and as a team so I thought I would make a digital version of her "progress walls." With these progress walls, you can write down your goals for the season and as you achieve them, you can click on them (change the color) signaling the goal has been acomplished. I have created divs for each goal/box and I am working on creating an event listener so that when you click on the goal it changes color. </p2>
+
+	<p>5/14/24: For my final project I decided to make a soccer website to both capture my soccer journey and make difficult tasks easier. On my soccer website, I have a link to my recruiting page as well as a dropdown which links to my soccer-related projects. These include a progress wall which was something my coach introduced, a schedule of my games and practices coming up, and a template for a graphic. Of all of these, the template was the most difficult to create. It involved many input boxes, divs and containers some of which were new concepts to me. </p>
+
 </body>
 </html>
