pushing final project

--- a/soccergallery.html
+++ b/soccergallery.html
@@ -1,19 +1,111 @@
 <!DOCTYPE html>
 <html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Oswald:wght@200..700&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+<head>
 <head>
 	<style type="text/css">
+		body{
+			background-image: url(stabackground.png);
+		}
+		p{
+			color: white;
+			font-family: Comfortaa;
+			font-size: 30px;
+		}
 		.box{
-			width:200px;
+			width:300px;
 			height:200px;
 			background-size:contain;
 			display: inline-block;
 			background-repeat: no-repeat;
-			position: absolute;
+			border: 3px solid white;
+
+/*			position: absolute;*/
+		}
+
+		#photo1{
+			background-image:url(./soccer/photo1.png) ;
+
+		}
+		#photo2{
+			background-image:url(./soccer/photo2.png) ;
+		}
+		#photo3{
+			background-image:url(./soccer/photo3.png) ;
+		}
+		#photo4{
+			background-image:url(./soccer/photo4.png) ;
+		}
+		#photo5{
+			background-image:url(./soccer/photo5.png) ;
+		}
+		#photo6{
+			background-image:url(./soccer/photo6.png) ;
+		}
+		#photo7{
+			background-image:url(./soccer/photo7.png) ;
+		}
+		#photo8{
+			background-image:url(./soccer/photo8.png) ;
+		}
+		#photo9{
+			background-image:url(./soccer/photo9.png) ;
+
+		}
+		#photo10{
+			background-image:url(./soccer/photo10.png) ;
+		}
+		#photo11{
+			background-image:url(./soccer/photo11.png) ;
+		}
+		#photo12{
+			background-image:url(./soccer/photo12.png) ;
+		}
+		#photo13{
+			background-image:url(./soccer/photo13.png) ;
+		}
+		#photo14{
+			background-image:url(./soccer/photo14.png) ;
+		}
+		#photo15{
+			background-image:url(./soccer/photo15.png) ;
+		}
+		#photo16{
+			background-image:url(./soccer/photo16.png) ;
+		}
+		#photo17{
+			background-image:url(./soccer/photo17.png) ;
+		}
+		#photo18{
+			background-image:url(./soccer/photo18.png) ;
 		}
 	</style>
 </head>
 <body>
-<div class="box"></div>
+	<center>
+<p>SOCCER PHOTO GALLERY 📸</p>
+<div class="box" id="photo1"></div>
+<div class="box" id="photo2"></div>
+<div class="box" id="photo3"></div>
+<div class="box" id="photo4"></div>
+<div class="box" id="photo5"></div>
+<div class="box" id="photo6"></div>
+<div class="box" id="photo7"></div>
+<div class="box" id="photo8"></div>
+<div class="box" id="photo9"></div>
+<div class="box" id="photo10"></div>
+<div class="box" id="photo11"></div>
+<div class="box" id="photo12"></div>
+<div class="box" id="photo13"></div>
+<div class="box" id="photo14"></div>
+<div class="box" id="photo15"></div>
+<div class="box" id="photo16"></div>
+<div class="box" id="photo17"></div>
+<div class="box" id="photo18"></div>
+</center>
+
 
 
 </body>
