--- a/soccerpage.html
+++ b/soccerpage.html
@@ -216,6 +216,7 @@
     <a href="winslow.html">progress wall</a>
     <a href="soccerschedule.html">schedule</a>
     <a href="templatemaking1.html">template making</a>
+    <a href="soccergallery.html">photo gallery</a>
   </div>
 </div>
 
