--- a/projects.html
+++ b/projects.html
@@ -118,6 +118,12 @@
 <a href="color.html">
 	<div class="button" id="colors"><center>colors🎨</center></div>
 </a>
+<a href="soccerpage.html">
+	<div class="button" id="finalproject"><center>final project!</center></div>
+</a>
+<a href="https://docs.google.com/presentation/d/1jmIDak2GAjSp2jV38Y8KmbpjRsi9cn1-rXWf_dH_rWc/edit#slide=id.p">
+	<div class="button" id="presentation"><center>slideshow</center></div>
+</a>
 
 
 <!-- <a href="projects1.html">
